--- a/index.html
+++ b/index.html
@@ -32,16 +32,20 @@
             position: fixed; inset: 0; z-index: 1000; background: #000; 
             display: flex; justify-content: center; align-items: center; 
             cursor: pointer; transition: opacity 1.5s ease, transform 1.5s ease; 
+            user-select: none;
         }
         #landing-video { 
             position: absolute; inset: 0; width: 100%; height: 100%; 
             object-fit: cover; 
         }
         #landing-prompt { 
-            position: relative; z-index: 1001; font-size: clamp(1.1rem, 4vw, 1.4rem); 
+            position: relative; z-index: 1001; font-size: clamp(1.1rem, 5vw, 1.6rem); 
             letter-spacing: 4px; text-transform: uppercase; 
             text-shadow: 0 0 20px var(--cyan); 
-            animation: pulseFade 3s infinite; 
+            animation: pulseFade 3s infinite; text-align: center;
+        }
+        #landing-prompt small {
+            font-size: 0.6em; display: block; margin-top: 8px; opacity: 0.7;
         }
         @keyframes pulseFade { 0%, 100% { opacity: 0.4; } 50% { opacity: 1; } }
         .dissolve-effect { opacity: 0; transform: scale(1.08); filter: blur(16px); pointer-events: none; }
@@ -69,7 +73,7 @@
         }
         #oracle-video { 
             position: absolute; inset: 0; width: 100%; height: 100%; 
-            object-fit: contain; /* changed from contain → cover can work better visually — test both */
+            object-fit: contain;
         }
         #shader-overlay { 
             position: absolute; inset: 0; background: var(--purple-shader); 
@@ -161,13 +165,12 @@
 </head>
 <body>
 
-<div id="landing-page" onclick="enterNexus()" role="button" aria-label="Enter Nexus">
+<div id="landing-page" role="button" aria-label="Enter Nexus">
     <video id="landing-video" autoplay loop muted playsinline preload="auto" aria-hidden="true">
         <source src="https://files.catbox.moe/jhxjmx.mp4" type="video/mp4">
-        <!-- fallback image if video fails -->
         <img src="https://via.placeholder.com/800x1200/000/00f2ff?text=Landing+Video" alt="">
     </video>
-    <div id="landing-prompt">INITIATE CONNECTION</div>
+    <div id="landing-prompt">INITIATE CONNECTION<br><small>(tap anywhere to enter)</small></div>
 </div>
 
 <div id="rain-container"></div>
@@ -206,12 +209,38 @@
 </div>
 
 <div id="bottom-dock">
-    <!-- dock icons unchanged, just make sure URLs are correct / live -->
     <div class="dock-icon" data-url="https://rem-psi-mauve.vercel.app/" style="--label-color: var(--c-maps)">
         <svg viewBox="0 0 24 24"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/></svg>
         <span class="guide-text">Maps</span>
     </div>
-    <!-- ... other dock icons remain the same ... -->
+    <div class="dock-icon" data-url="https://olympus-lac.vercel.app/" style="--label-color: var(--c-hoodie)">
+        <svg viewBox="0 0 24 24"><path d="M19 13H5v-2h14v2z"/></svg>
+        <span class="guide-text">Hoodies</span>
+    </div>
+    <div class="dock-icon" data-url="https://georgia-aquarium.vercel.app/" style="--label-color: var(--c-aqua)">
+        <svg viewBox="0 0 24 24"><path d="M12,20C7.58,20 4,16.42 4,12C4,7.58 7.58,4 12,4C16.42,4 20,7.58 20,12C20,16.42 16.42,20 12,20M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2M16,11C15.45,11 15,11.45 15,12C15,12.55 15.45,13 16,13C16.55,13 17,12.55 17,12C17,11.45 16.55,11 16,11M12,9C11.45,9 11,9.45 11,10C11,10.55 11.45,11 12,11C12.55,11 13,10.55 13,10C13,9.45 12.55,9 12,9M8,11C7.45,11 7,11.45 7,12C7,12.55 7.45,13 8,13C8.55,13 9,12.55 9,12C9,11.45 8.55,11 8,11Z"/></svg>
+        <span class="guide-text">Aquarium</span>
+    </div>
+    <div class="dock-icon" data-url="https://nexus-symbiote.onrender.com/" style="--label-color: var(--c-symbiote)">
+        <svg viewBox="0 0 24 24"><path d="M12 2L4.5 20.29l.71.71L12 18l6.79 3 .71-.71L12 2z"/></svg>
+        <span class="guide-text">Creator</span>
+    </div>
+    <div class="dock-icon" data-url="https://grief-gully.vercel.app/" style="--label-color: var(--c-gully)">
+        <svg viewBox="0 0 24 24"><path d="M12 2L2 22h20L12 2z"/></svg>
+        <span class="guide-text">Gully</span>
+    </div>
+    <div class="dock-icon" data-url="https://olympian-finances.vercel.app/" style="--label-color: var(--c-finance)">
+        <svg viewBox="0 0 24 24"><path d="M12 2c5.52 0 10 4.48 10 10s-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2z"/></svg>
+        <span class="guide-text">Finances</span>
+    </div>
+    <div class="dock-icon" data-url="https://starblood.vercel.app/" style="--label-color: var(--c-starblood)">
+        <svg viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+        <span class="guide-text">Blood</span>
+    </div>
+    <div class="dock-icon" data-url="https://mega-city-liard.vercel.app/" style="--label-color: var(--c-city)">
+        <svg viewBox="0 0 24 24"><path d="M3 21h18v-2H3v2zm0-4h18v-2H3v2zm0-4h18v-2H3v2zm0-4h18V9H3v2zm0-4h18V5H3v2z"/></svg>
+        <span class="guide-text">City</span>
+    </div>
     <div class="dock-icon" data-url="EMERGENT_E1" style="--label-color: var(--c-emergent)">
         <svg viewBox="0 0 24 24"><path d="M12 2L2 12l10 10 10-10L12 2zm0 18l-8-8 8-8 8 8-8 8zm0-13l-5 5 5 5 5-5-5-5z"/></svg>
         <span class="guide-text">E1</span>
@@ -230,11 +259,24 @@
     let currentFiles = [];
 
     function enterNexus() {
+        console.log("[DEBUG] Enter triggered");
+
         const landing = document.getElementById('landing-page');
         landing.classList.add('dissolve-effect');
-        document.getElementById('oracle-video').play().catch(()=>{});
+
+        const oracleVid = document.getElementById('oracle-video');
+        oracleVid.play().then(() => {
+            console.log("[DEBUG] Oracle video started");
+        }).catch(err => {
+            console.warn("[DEBUG] Oracle play failed:", err.message);
+        });
+
         createRain();
-        setTimeout(() => { landing.style.display = 'none'; }, 1600);
+
+        setTimeout(() => {
+            landing.style.display = 'none';
+            console.log("[DEBUG] Landing page hidden");
+        }, 1600);
     }
 
     function createRain() {
@@ -259,7 +301,7 @@
             if (i < text.length) {
                 field.innerHTML += text.charAt(i) === '\n' ? '<br>' : text.charAt(i);
                 i++;
-                setTimeout(type, 18 + Math.random() * 12); // slight human-like variation
+                setTimeout(type, 18 + Math.random() * 12);
                 field.scrollTop = field.scrollHeight;
             } else {
                 document.getElementById('shader-overlay').style.opacity = 0;
@@ -306,81 +348,7 @@
         const iframe = document.getElementById('holo-iframe');
 
         if (url === 'EMERGENT_E1') {
-            iframe.srcdoc = `
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body { 
-        background: linear-gradient(135deg, #4b0082, #8a2be2); 
-        font-family: 'Courier New', monospace; color: #e0e0ff; 
-        height: 100vh; display: flex; align-items: center; justify-content: center; padding: 16px; 
-    }
-    .container { 
-        background: rgba(20,20,50,0.65); backdrop-filter: blur(16px); 
-        border: 1px solid rgba(0,242,255,0.3); border-radius: 16px; 
-        padding: 32px; max-width: 580px; width: 100%; text-align: center; 
-        box-shadow: 0 8px 40px rgba(0,0,0,0.6); 
-    }
-    h1 { font-size: 2.6rem; margin-bottom: 12px; letter-spacing: 1px; 
-         background: linear-gradient(90deg, #00f2ff, #a78bfa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-    .subtitle { font-size: 1.1rem; opacity: 0.85; margin-bottom: 24px; }
-    .chat-area { background: rgba(0,0,0,0.35); border-radius: 12px; padding: 16px; max-height: 320px; overflow-y: auto; text-align: left; margin: 16px 0; }
-    .message { margin: 10px 0; padding: 10px 14px; border-radius: 10px; }
-    .user { background: rgba(0,242,255,0.18); text-align: right; }
-    .ai   { background: rgba(167,139,250,0.22); }
-    .input-group { display: flex; gap: 10px; }
-    input { flex:1; padding: 14px; border: none; border-radius: 10px; background: rgba(255,255,255,0.08); color: white; font-size: 1rem; }
-    input::placeholder { color: rgba(255,255,255,0.5); }
-    button { padding: 14px 32px; background: linear-gradient(90deg, #7C3AED, #00c3ff); color: white; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; }
-    button:active { transform: scale(0.97); }
-</style>
-</head>
-<body>
-<div class="container">
-    <h1>🌌 E1 Agent</h1>
-    <div class="subtitle">Emergent Intelligence — online</div>
-    <div class="chat-area" id="chat">
-        <div class="message ai">Greetings. I am E1. How may I assist you within the symbiote?</div>
-    </div>
-    <div class="input-group">
-        <input type="text" id="e1-input" placeholder="Speak to E1..." aria-label="E1 input"/>
-        <button onclick="sendE1Message()">Transmit</button>
-    </div>
-</div>
-<script>
-    async function sendE1Message() {
-        const input = document.getElementById('e1-input');
-        const chat = document.getElementById('chat');
-        const msg = input.value.trim();
-        if (!msg) return;
-        chat.innerHTML += \`<div class="message user">You: \${msg}</div>\`;
-        input.value = ''; chat.scrollTop = chat.scrollHeight;
-
-        const think = document.createElement('div'); think.className = 'message ai'; think.id = 'thinking'; think.textContent = 'E1 is processing...';
-        chat.appendChild(think); chat.scrollTop = chat.scrollHeight;
-
-        try {
-            const res = await fetch('/api/transmit', {
-                method: 'POST',
-                headers: {'Content-Type':'application/json'},
-                body: JSON.stringify({ prompt: '[E1] ' + msg, handshake: 'e1-context' })
-            });
-            const data = await res.json();
-            think.remove();
-            chat.innerHTML += \`<div class="message ai">E1: \${data.verdict || data.response || '—'}</div>\`;
-        } catch {
-            think.remove();
-            chat.innerHTML += '<div class="message ai">E1: Link disrupted.</div>';
-        }
-        chat.scrollTop = chat.scrollHeight;
-    }
-    document.getElementById('e1-input').onkeypress = e => { if(e.key==='Enter') sendE1Message(); };
-</script>
-</body>
-</html>`;
+            iframe.srcdoc = `...`;  // ← your existing E1 srcdoc here (kept short for brevity)
             overlay.style.display = 'flex';
             return;
         }
@@ -395,7 +363,15 @@
         document.getElementById('holo-iframe').src = '';
     }
 
-    // Event listeners
+    // Event listeners for landing page
+    const landingEl = document.getElementById('landing-page');
+    landingEl.addEventListener('click', enterNexus);
+    landingEl.addEventListener('touchend', (e) => {
+        e.preventDefault();
+        enterNexus();
+    }, { passive: false });
+
+    // Main UI listeners
     document.getElementById('send-btn').addEventListener('click', sendToArtemis);
     document.getElementById('guest-cmd').addEventListener('keypress', e => {
         if (e.key === 'Enter') sendToArtemis();
@@ -405,7 +381,7 @@
         el.addEventListener('click', () => openHolo(el.dataset.url));
     });
 
-    // Optional: preload videos slightly after load
+    // Preload oracle video
     window.addEventListener('load', () => {
         document.getElementById('oracle-video').load();
     });
